Responsive on tablet, fix res mobile

--- a/src/view/css/responsive.css
+++ b/src/view/css/responsive.css
@@ -145,6 +145,27 @@
     }
 }
 
+/*Tablet*/
+@media only screen and (min-width: 768px) and (max-width: 1024px){
+    .footer-contacts {
+        margin-left: -41px !important;
+    }
+
+    footer .newTablet {
+        margin-left: -208px;
+        margin-top: 12px;
+    }
+
+    footer .generalityTablet {
+        margin-left: 283px;
+        margin-top: -374px;
+    }
+
+    footer .generalityTablet .list-marked {
+        margin-left: -37px;
+    }
+}
+
 /* Mobile */
 @media (max-width: 576px){
     .carousel-inner .carousel-item .imageTrain{
@@ -161,6 +182,10 @@
 
     .left{
         margin-left: -38px;
+    }
+    
+    footer .container .list-inline {
+        margin-left: 18px;
     }
 
     footer{
